# lamination-peel-comparator

./: .gitattributes  .gitignore  LaminationPeelComparator.spec  README.md  pyproject.toml
examples/: README.md  measured_ab.peel.json  trajectory_A.csv  trajectory_B.csv
scripts/: audit_dist.ps1  build_release.ps1  smoke_app.ps1
src/lamination_sim/: __init__.py  __main__.py  comparison.py  exports.py  models.py  presets.py  project_io.py  simulation.py  trajectory.py
src/lamination_sim/ui/: __init__.py  condition_editor.py  core_bridge.py  main_window.py  results_view.py  tension_settings.py  tension_view.py  theme.py  visualization.py  worker.py
tests/: test_camera_controls.py  test_causal_inputs.py  test_exports.py  test_invariants.py  test_physics.py  test_project_io.py  test_simulation.py  test_tension_model.py  test_tension_ui.py  test_trajectory.py  test_trim_geometry.py  test_visualization_time.py
