[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lamination-peel-comparator"
version = "0.6.0"
description = "Relative A/B simulator for reverse peeling risk in dual-film panel lamination"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "numpy>=2.2,<3",
  "scipy>=1.15,<2",
  "pydantic>=2.10,<3",
  "PySide6>=6.8,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
  "pyinstaller>=6.10,<7",
]

[project.scripts]
lamination-peel = "lamination_sim.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["lamination_sim"]
branch = true
